# SankoTv

app/: .gitignore  CMakeLists.txt  resources.qrc
app/_backups/: CMakeLists_20260628_144645.txt  CMakeLists_20260628_151631.txt
app/src/: AnimaticPage.cpp  AnimaticPage.h  AnimaticTimeline.cpp  AnimaticTimeline.h  CodeEditor.cpp  CodeEditor.h  ColorPanel.cpp  ColorPanel.h  ConsistencyBoard.cpp  ConsistencyBoard.h  DashboardPage.cpp  DashboardPage.h  DrawingCanvas.cpp  DrawingCanvas.h  FloatingToolWindow.cpp  FloatingToolWindow.h  GenerationPage.cpp  GenerationPage.h  MainWindow.cpp  MainWindow.h  PerspectiveTool.cpp  PerspectiveTool.h  SankoDockOverlay.cpp  SankoDockOverlay.h  SankoSlider.cpp  SankoSlider.h  ScriptEditorPage.cpp  ScriptEditorPage.h  StoryboardModel.h  StoryboardPage.cpp  StoryboardPage.h  ZoomToolbar.cpp  ZoomToolbar.h  main.cpp
app/src/brush/: Brush.h  BrushEngine.cpp  BrushEngine.h
app/src/docking/: DockController.cpp  DockController.h  DockOverlay.cpp  DockOverlay.h  DockTitleBar.cpp  DockTitleBar.h
